--- a/2.BasicDataStructure.ipynb
+++ b/2.BasicDataStructure.ipynb
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -360,7 +360,103 @@
     "\n",
     "  \n",
     "设计：  \n",
-    "  \n"
+    "- class Printer: 三个fields， printRate，currentTask， timeRemaining  \n",
+    "- class Task: 两个fields， pages, initTime\n",
+    "- simulation: 一个queue，里边装tasks，当printer没活的时候，queue里出来一个task，同时算一下这个task已经等了多久了。把等待的时间装进waitTimeList里去。当printer有活的时候，一开始干活儿的时候算出来干这个task需要多久timeRemaining，然后用tick（）来模拟时间一秒一秒的过去直到timeRemaining等于零了，这时候就又回到printer不忙的状态了。\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(148.69565217391303, 0)\n",
+      "(158.1904761904762, 0)\n",
+      "(71.6, 2)\n",
+      "(216.76, 1)\n",
+      "(84.72222222222223, 0)\n",
+      "(146.33333333333334, 0)\n",
+      "(173.55, 0)\n",
+      "(32.888888888888886, 0)\n",
+      "(19.357142857142858, 0)\n",
+      "(154.61904761904762, 5)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "\n",
+    "class Printer:\n",
+    "    \n",
+    "    def __init__(self, ppm):\n",
+    "        self._printRate = ppm\n",
+    "        self._currentTask = None\n",
+    "        self._timeRemaining = 0\n",
+    "        \n",
+    "    def busy(self):\n",
+    "        return self._currentTask != None\n",
+    "    \n",
+    "    def startNext(self, newTask):\n",
+    "        self._currentTask = newTask\n",
+    "        self._timeRemaining = 60.0 * newTask.getPages() / self._printRate\n",
+    "        \n",
+    "    def tick(self):\n",
+    "        if self.busy():\n",
+    "            self._timeRemaining -= 1\n",
+    "            if self._timeRemaining <= 0:\n",
+    "                self._currentTask = None\n",
+    "                self._timeRemaining = 0\n",
+    "    \n",
+    "    \n",
+    "        \n",
+    "class Task:\n",
+    "    \n",
+    "    def __init__(self, time):\n",
+    "        self._initTime = time\n",
+    "        self._pages = random.randrange(1, 21)\n",
+    "        \n",
+    "    def getPages(self):\n",
+    "        return self._pages\n",
+    "    \n",
+    "    def waitTime(self, currentTime):\n",
+    "        return currentTime - self._initTime\n",
+    "        \n",
+    "def simulation(numSeconds, printerRate):\n",
+    "    labPrinter = Printer(printerRate)\n",
+    "    printQueue = Queue()\n",
+    "    waitTimeList = []\n",
+    "    \n",
+    "    for currentTime in range(numSeconds):\n",
+    "        if (newTask()):\n",
+    "            task = Task(currentTime)\n",
+    "            printQueue.enqueue(task)\n",
+    "            \n",
+    "        if (not labPrinter.busy()) and (not printQueue.isEmpty()):\n",
+    "            nextTask = printQueue.dequeue()\n",
+    "            wait = nextTask.waitTime(currentTime)\n",
+    "            waitTimeList.append(wait)\n",
+    "            labPrinter.startNext(nextTask)\n",
+    "        labPrinter.tick()\n",
+    "        \n",
+    "    averageWaitTime = sum(waitTimeList) / float(len(waitTimeList))\n",
+    "    return averageWaitTime, printQueue.size()\n",
+    "            \n",
+    "       \n",
+    "def newTask():\n",
+    "    if random.randrange(1, 181) == 180:\n",
+    "        return True\n",
+    "    else:\n",
+    "        return False\n",
+    "\n",
+    "for i in range(10):\n",
+    "    print simulation(3600, 5)\n",
+    "    "
    ]
   },
   {
@@ -370,20 +466,7 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": [
-    "class printer:\n",
-    "    \n",
-    "    def __init__(self, ppm):\n",
-    "        self._printRate = ppm\n",
-    "        self._currentTask = None\n",
-    "        self._timeRemaining = 0\n",
-    "        \n",
-    "class Task:\n",
-    "    \n",
-    "    def __init__(self\n",
-    "        \n",
-    "    "
-   ]
+   "source": []
   }
  ],
  "metadata": {
