--- a/4.SortingAndSearching.ipynb
+++ b/4.SortingAndSearching.ipynb
@@ -292,7 +292,73 @@
    "metadata": {},
    "source": [
     "##7. Shell Sort\n",
-    "- "
+    "- 对于一个给定的gap，比如说gap=3，那么[0,1,2,3,4,5,6,7]中，index=0,3,6的一组；index=1,4,7的一组；index=2,5的一组。\n",
+    "- 注意，gap等于几，就会分成几组。比如说，gap=3，那么就会分成三组。\n",
+    "- 对于每一组，分别进行insertion sort,这里用函数shellInsertionSort(aList, start, gap)来实现。\n",
+    "- insertion sort其实就是gap=1的shellInsertionSort(aList, start=0, gap=1)。\n",
+    "- 整个一个shell sort流程，从选取gap=N/2开始，然后是N/4，N/8,N/16，...，直到gap=1结束。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[17, 20, 26, 31, 44, 54, 55, 77, 93]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def shellInsertionSort(aList, startIdx, gap):\n",
+    "    for rnd in range(startIdx+gap, len(aList), gap):\n",
+    "        idx = rnd\n",
+    "        insertValue = aList[idx]\n",
+    "        while (idx>startIdx) and (insertValue<aList[idx-gap]):\n",
+    "            aList[idx] = aList[idx-gap]\n",
+    "            idx -= gap\n",
+    "        aList[idx] = insertValue\n",
+    "        \n",
+    "def shellSort(aList):\n",
+    "    gap = len(aList) / 2\n",
+    "    while (gap>=1):\n",
+    "        for startIdx in range(gap):\n",
+    "            shellInsertionSort(aList, startIdx, gap)\n",
+    "        gap /= 2\n",
+    "        \n",
+    "alist = [54,26,93,17,77,31,44,55,20]\n",
+    "shellSort(alist)\n",
+    "alist   "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 3, 5, 7, 9]"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "range(1, 10, 2)"
    ]
   },
   {
