Insertiong and Shell sorting code revised

--- a/4.SortingAndSearching.ipynb
+++ b/4.SortingAndSearching.ipynb
@@ -284,7 +284,71 @@
     "        \n",
     "alist = [54,26,93,17,77,31,44,55,20]\n",
     "insertionSort(alist)\n",
-    "alist "
+    "alist"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Princeton的版本如下：**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[17, 20, 26, 31, 44, 54, 55, 77, 93]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def insertionSortPrinceton(aList):\n",
+    "    N = len(aList)\n",
+    "    for rnd in range(1, N):\n",
+    "        for idx in range(rnd, 0, -1):\n",
+    "            if (aList[idx]<aList[idx-1]):\n",
+    "                temp = aList[idx]\n",
+    "                aList[idx] = aList[idx-1]\n",
+    "                aList[idx-1] = temp\n",
+    "            else:\n",
+    "                break\n",
+    "                \n",
+    "alist = [54,26,93,17,77,31,44,55,20]\n",
+    "insertionSortPrinceton(alist)\n",
+    "alist"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[4, 3, 2, 1]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "range(4,0,-1)"
    ]
   },
   {
@@ -297,6 +361,13 @@
     "- 对于每一组，分别进行insertion sort,这里用函数shellInsertionSort(aList, start, gap)来实现。\n",
     "- insertion sort其实就是gap=1的shellInsertionSort(aList, start=0, gap=1)。\n",
     "- 整个一个shell sort流程，从选取gap=N/2开始，然后是N/4，N/8,N/16，...，直到gap=1结束。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**cost: **在O(n)和O(n^2)之间。"
    ]
   },
   {
@@ -359,6 +430,78 @@
    ],
    "source": [
     "range(1, 10, 2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "**Princeton版本如下：**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[17, 20, 26, 31, 44, 54, 55, 77, 93]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def shellSortPrinceton(aList):\n",
+    "    N = len(aList)\n",
+    "    gap = 1\n",
+    "    while (gap < N/3):\n",
+    "        gap = gap*3 + 1\n",
+    "    \n",
+    "    while (gap >= 1):\n",
+    "        for rnd in range(gap, N):\n",
+    "            for idx in range(rnd, gap-1, -gap):\n",
+    "                if (aList[idx]<aList[idx-gap]):\n",
+    "                    temp = aList[idx]\n",
+    "                    aList[idx] = aList[idx-1]\n",
+    "                    aList[idx-1] = temp\n",
+    "                else:\n",
+    "                    break\n",
+    "        gap /= 3\n",
+    "\n",
+    "alist = [54,26,93,17,77,31,44,55,20]\n",
+    "shellSortPrinceton(alist)\n",
+    "alist   "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[10]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "range(10, 9, -10)"
    ]
   },
   {
