quick sort code

--- a/4.SortingAndSearching.ipynb
+++ b/4.SortingAndSearching.ipynb
@@ -595,6 +595,81 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##9. quick Sort  \n",
+    "- 首先需要写一个partition(aList, first, last)的function。\n",
+    "- 这个function以aList[first]作为pivot value， 返回的是split point。\n",
+    "- 再移动leftmark和rightMark的时候，需要注意边界条件，如下：\n",
+    "- 先向右移动leftmark，直到aList[leftmark]>=pivot的时候，停！注意，是>=。\n",
+    "- 再向左移动rightmark，直到aList[rightmark]< pivot的时候停！注意是<。\n",
+    "- partition()function之后， 是要写一个quickSortHelper(aList, first, last)的function，recursively执行这个function。\n",
+    "- 最后，用quickSort()function call helper function。\n",
+    "- 为啥要先写一个helper function呢？因为helper function用first，last这俩argument， 就免去了建立额外的list的必要，节省了memory。\n",
+    "- quick sort 比merge sort牛逼的一点就是，它不需要额外的memory去建立新的list。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[7, 17, 17, 20, 26, 31, 44, 54, 55, 77, 93, 93]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def partition(aList, first, last):\n",
+    "    #return the split point of aList[first]\n",
+    "    pivotValue = aList[first]\n",
+    "    leftmark = first + 1\n",
+    "    rightmark = last\n",
+    "    \n",
+    "    while not rightmark < leftmark:\n",
+    "        while aList[leftmark]<pivotValue and leftmark<=rightmark:\n",
+    "            #   notice the \"<\" here\n",
+    "            leftmark += 1\n",
+    "        while aList[rightmark]>=pivotValue and leftmark<=rightmark:\n",
+    "            #     notice the \">=\" here\n",
+    "            rightmark -= 1\n",
+    "            \n",
+    "        if rightmark < leftmark:\n",
+    "            aList[first] = aList[rightmark]\n",
+    "            aList[rightmark] = pivotValue\n",
+    "            return rightmark\n",
+    "            \n",
+    "        else:\n",
+    "            temp = aList[leftmark]\n",
+    "            aList[leftmark] = aList[rightmark]\n",
+    "            aList[rightmark] = temp\n",
+    "            \n",
+    "def quickSortHelper(aList, first, last):\n",
+    "    if first < last:\n",
+    "        splitpoint = partition(aList, first, last)\n",
+    "        quickSortHelper(aList, first, splitpoint-1)\n",
+    "        quickSortHelper(aList, splitpoint+1, last)\n",
+    "        \n",
+    "def quickSort(aList):\n",
+    "    quickSortHelper(aList, 0, len(aList)-1)\n",
+    "    \n",
+    "\n",
+    "            \n",
+    "alist = [93,7,54,26,17,77,31,44,55,20,17,93]\n",
+    "quickSort(alist)\n",
+    "alist      "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
