--- a/4.SortingAndSearching.ipynb
+++ b/4.SortingAndSearching.ipynb
@@ -601,9 +601,7 @@
     "##9. quick Sort  \n",
     "- 首先需要写一个partition(aList, first, last)的function。\n",
     "- 这个function以aList[first]作为pivot value， 返回的是split point。\n",
-    "- 再移动leftmark和rightMark的时候，需要注意边界条件，如下：\n",
-    "- 先向右移动leftmark，直到aList[leftmark]>=pivot的时候，停！注意，是>=。\n",
-    "- 再向左移动rightmark，直到aList[rightmark]< pivot的时候停！注意是<。\n",
+    "- 在移动leftmark的时候，需要注意while循环的条件要先是看left<=right，这是为了避免left到达N时出现index out of range的error：\n",
     "- partition()function之后， 是要写一个quickSortHelper(aList, first, last)的function，recursively执行这个function。\n",
     "- 最后，用quickSort()function call helper function。\n",
     "- 为啥要先写一个helper function呢？因为helper function用first，last这俩argument， 就免去了建立额外的list的必要，节省了memory。\n",
@@ -612,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -620,53 +618,53 @@
     {
      "data": {
       "text/plain": [
-       "[7, 17, 17, 20, 26, 31, 44, 54, 55, 77, 93, 93]"
+       "[7, 17, 17, 20, 26, 31, 44, 54, 55, 77, 95, 98]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "def partition(aList, first, last):\n",
-    "    #return the split point of aList[first]\n",
-    "    pivotValue = aList[first]\n",
-    "    leftmark = first + 1\n",
-    "    rightmark = last\n",
+    "def partition(alist, first, last):\n",
+    "    pivot = alist[first]\n",
+    "    left = first + 1\n",
+    "    right = last\n",
     "    \n",
-    "    while not rightmark < leftmark:\n",
-    "        while aList[leftmark]<pivotValue and leftmark<=rightmark:\n",
-    "            #   notice the \"<\" here\n",
-    "            leftmark += 1\n",
-    "        while aList[rightmark]>=pivotValue and leftmark<=rightmark:\n",
-    "            #     notice the \">=\" here\n",
-    "            rightmark -= 1\n",
-    "            \n",
-    "        if rightmark < leftmark:\n",
-    "            aList[first] = aList[rightmark]\n",
-    "            aList[rightmark] = pivotValue\n",
-    "            return rightmark\n",
-    "            \n",
+    "    done = False\n",
+    "    \n",
+    "    while not done:\n",
+    "        while left<=right and alist[left]<=pivot:\n",
+    "            #left<=right must be the first condition being tested,\n",
+    "            #in order to avoid left being len(alist), which causes out of range index error\n",
+    "            left += 1\n",
+    "        while left<= right and alist[right]>=pivot:\n",
+    "            right -= 1\n",
+    "        if left > right:\n",
+    "            done = True\n",
     "        else:\n",
-    "            temp = aList[leftmark]\n",
-    "            aList[leftmark] = aList[rightmark]\n",
-    "            aList[rightmark] = temp\n",
-    "            \n",
-    "def quickSortHelper(aList, first, last):\n",
-    "    if first < last:\n",
-    "        splitpoint = partition(aList, first, last)\n",
-    "        quickSortHelper(aList, first, splitpoint-1)\n",
-    "        quickSortHelper(aList, splitpoint+1, last)\n",
-    "        \n",
-    "def quickSort(aList):\n",
-    "    quickSortHelper(aList, 0, len(aList)-1)\n",
+    "            temp = alist[left]\n",
+    "            alist[left] = alist[right]\n",
+    "            alist[right] = temp\n",
     "    \n",
+    "    alist[first] = alist[right]       \n",
+    "    alist[right] = pivot\n",
+    "    return right\n",
     "\n",
-    "            \n",
-    "alist = [93,7,54,26,17,77,31,44,55,20,17,93]\n",
+    "def quickSortHelper(alist, first, last):\n",
+    "    if first >= last:\n",
+    "        return;\n",
+    "    splitpoint = partition(alist, first, last)\n",
+    "    quickSortHelper(alist, first, splitpoint-1)\n",
+    "    quickSortHelper(alist, splitpoint+1, last)\n",
+    "    \n",
+    "def quickSort(alist):\n",
+    "    quickSortHelper(alist, 0, len(alist)-1)\n",
+    "    \n",
+    "alist = [98,7,54,26,17,77,31,44,55,20,17,95]\n",
     "quickSort(alist)\n",
-    "alist      "
+    "alist"
    ]
   },
   {
