sorting and searching

--- a/4.SortingAndSearching.ipynb
+++ b/4.SortingAndSearching.ipynb
@@ -12,8 +12,9 @@
     "5. Selection Sort\n",
     "6. Insert Sort\n",
     "7. Shell Sort\n",
-    "8. Merge Sort\n",
-    "9. Quick Sort"
+    "8. Knuth Shuffle\n",
+    "9. Merge Sort\n",
+    "10. Quick Sort"
    ]
   },
   {
@@ -296,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -307,7 +308,7 @@
        "[17, 20, 26, 31, 44, 54, 55, 77, 93]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -506,11 +507,54 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##8. Knuth Shuffle\n",
+    "- 对于每个idx=1,2,...N-1, uniformly选取一个ridx from [0, idx]。\n",
+    "- 互换 idx 和 ridx的值。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[6, 2, 1, 9, 3, 8, 5, 4, 7, 0]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import random\n",
+    "\n",
+    "def knuthShuffle(alist):\n",
+    "    N = len(alist)\n",
+    "    for idx in range(1, N):\n",
+    "        ridx = random.randint(0, idx)\n",
+    "        temp = alist[idx]\n",
+    "        alist[idx] = alist[ridx]\n",
+    "        alist[ridx] = temp\n",
+    "        \n",
+    "alist = range(10)\n",
+    "knuthShuffle(alist)\n",
+    "alist"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
    "source": [
-    "##8. Merge Sort"
+    "##9. Merge Sort"
    ]
   },
   {
@@ -598,19 +642,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##9. quick Sort  \n",
-    "- 首先需要写一个partition(aList, first, last)的function。\n",
-    "- 这个function以aList[first]作为pivot value， 返回的是split point。\n",
-    "- 在移动leftmark的时候，需要注意while循环的条件要先是看left<=right，这是为了避免left到达N时出现index out of range的error：\n",
-    "- partition()function之后， 是要写一个quickSortHelper(aList, first, last)的function，recursively执行这个function。\n",
-    "- 最后，用quickSort()function call helper function。\n",
-    "- 为啥要先写一个helper function呢？因为helper function用first，last这俩argument， 就免去了建立额外的list的必要，节省了memory。\n",
-    "- quick sort 比merge sort牛逼的一点就是，它不需要额外的memory去建立新的list。"
+    "**Princeton的版本**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -618,10 +655,79 @@
     {
      "data": {
       "text/plain": [
-       "[7, 17, 17, 20, 26, 31, 44, 54, 55, 77, 95, 98]"
+       "[17, 20, 26, 31, 44, 54, 55, 77, 93]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def merge(alist, first, mid, last):\n",
+    "    aux = alist[:]\n",
+    "    i = first\n",
+    "    j = mid + 1\n",
+    "    for k in range(first, last+1):\n",
+    "        if i > mid:\n",
+    "            alist[k] = aux[j]\n",
+    "            j += 1\n",
+    "        elif j > last:\n",
+    "            alist[k] = aux[i]\n",
+    "            i += 1\n",
+    "        elif aux[i] <= aux[j]:\n",
+    "            alist[k] = aux[i]\n",
+    "            i += 1\n",
+    "        else:\n",
+    "            alist[k] = aux[j]\n",
+    "            j += 1\n",
+    "\n",
+    "def mergeSortHelper(alist, first, last):\n",
+    "    if first >= last:\n",
+    "        return\n",
+    "    mid = (first + last) / 2\n",
+    "    mergeSortHelper(alist, first, mid)\n",
+    "    mergeSortHelper(alist, mid+1, last)\n",
+    "    merge(alist, first, mid, last)\n",
+    "    \n",
+    "def mergeSortPrinceton(alist):\n",
+    "    mergeSortHelper(alist, 0, len(alist)-1)\n",
+    "    \n",
+    "alist = [54,26,93,17,77,31,44,55,20]\n",
+    "mergeSortPrinceton(alist)\n",
+    "alist "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##10. quick Sort  \n",
+    "- 首先需要写一个partition(aList, first, last)的function。\n",
+    "- 这个function以aList[first]作为pivot value， 返回的是split point。\n",
+    "- 在移动leftmark的时候，需要注意while循环的条件要先是看left<=right，这是为了避免left到达N时出现index out of range的error：\n",
+    "- partition()function之后， 是要写一个quickSortHelper(aList, first, last)的function，recursively执行这个function。\n",
+    "- 最后，用quickSort()function call helper function。\n",
+    "- 为啥要先写一个helper function呢？因为helper function用first，last这俩argument， 就免去了建立额外的list的必要，节省了memory。\n",
+    "- quick sort 比merge sort牛逼的一点就是，它不需要额外的memory去建立新的list。\n",
+    "- 注意，在quick sort之前要先knuth shuffle一下，以确保避免worst case的发生。\n",
+    "- average case： 1.39*nlgn compares，39% more compares than mergesort, but faster than mergesort because of less data movement."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[7, 17, 17, 20, 26, 31, 44, 54, 55, 77, 95, 95]"
+      ]
+     },
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -660,9 +766,10 @@
     "    quickSortHelper(alist, splitpoint+1, last)\n",
     "    \n",
     "def quickSort(alist):\n",
+    "    knuthShuffle(alist)\n",
     "    quickSortHelper(alist, 0, len(alist)-1)\n",
     "    \n",
-    "alist = [98,7,54,26,17,77,31,44,55,20,17,95]\n",
+    "alist = [95,7,54,26,17,77,31,44,55,20,17,95]\n",
     "quickSort(alist)\n",
     "alist"
    ]
